--- a/style.css
+++ b/style.css
@@ -50,10 +50,30 @@ body {
     border-left: 2px solid var(--botao-ativo);
     border-right: 2px solid var(--botao-ativo);
     border-top: none;
-}
 
+
+
+    .botoes {
+        display: block;
+    }
+}
+ .abas-textos{
+    background-color: var(--texto-fundo);
+
+    @media screen and (min-width: 768px) {
+     
+.botoes {
+    display: flex;
+}        
+    } 
+        
+ }
 .botao:first-child {
     border-radius: 40px 40px 0 0;
+}
+
+.botao:last-child{
+    border-radius: 0 40px 0 0;
 }
 
 .botoes {
